--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body>
+    <nav>
+
+        <a href="{{ path('app_github') }}">Github</a>
+        <a href="{{ path('app_tft') }}">TFT</a>
+    </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
